syntax = "proto3";

package common;

option go_package = "grpc-course-protobuf/pb/common";

message BaseResponse {
  int64 status_code = 1;
  bool is_success = 2;
  string message = 3;
  repeated ValidationError validation_error = 4;
}

message ValidationError {
  string field = 1;
  string message = 2;
}